[package]
name = "kevy-phnx"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kevy-cli"
path = "src/cmd/client.rs"

[[bin]]
name = "kevy-server"
path = "src/cmd/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.193"
toml = "0.8.8"
tokio = { version = "1", features = ["full"] }
tokio-util = "*"
log = "0.4.20"
